--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash-es": "^4.17.12",
+    "antd": "^5.21.0",
+    "immer": "^10.1.1",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
